--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "mineflayer": "^4.8.1",
     "mineflayer-pathfinder": "^2.4.2",
+    "mineflayer-pvp": "^1.3.2",
+    "mineflayer-web-inventory": "^1.8.4",
+    "opn": "^6.0.0",
     "readline": "^1.3.0",
     "readline-sync": "^1.4.10"
   }
