--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "mineflayer": "^4.8.1",
+    "mineflayer-armor-manager": "^1.4.2",
     "mineflayer-pathfinder": "^2.4.2",
     "mineflayer-pvp": "^1.3.2",
+    "mineflayer-tool": "^1.2.0",
+    "mineflayer-tps": "^1.0.1",
     "mineflayer-web-inventory": "^1.8.4",
     "opn": "^6.0.0",
     "readline": "^1.3.0",
