--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mineflayer": "^4.8.1",
     "mineflayer-armor-manager": "^1.4.2",
+    "mineflayer-collectblock": "^1.4.1",
     "mineflayer-pathfinder": "^2.4.2",
     "mineflayer-pvp": "^1.3.2",
     "mineflayer-tool": "^1.2.0",
