--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "buildpkg": "pkg bot.js",
+    "buildnexe": "nexe bot.js"
   },
   "author": "quangei",
   "license": "MIT",
   "dependencies": {
+    "ansi": "^0.3.1",
     "mineflayer": "^4.8.1",
     "mineflayer-armor-manager": "^1.4.2",
     "mineflayer-collectblock": "^1.4.1",
@@ -19,6 +22,7 @@
     "mineflayer-web-inventory": "^1.8.4",
     "opn": "^6.0.0",
     "readline": "^1.3.0",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "repl": "^0.1.3"
   }
 }
