--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ansi": "^0.3.1",
     "mineflayer": "^4.8.1",
     "mineflayer-armor-manager": "^1.4.2",
+    "mineflayer-auto-eat": "^3.3.6",
     "mineflayer-collectblock": "^1.4.1",
     "mineflayer-pathfinder": "^2.4.2",
     "mineflayer-pvp": "^1.3.2",
@@ -22,7 +23,6 @@
     "mineflayer-web-inventory": "^1.8.4",
     "opn": "^6.0.0",
     "readline": "^1.3.0",
-    "readline-sync": "^1.4.10",
-    "repl": "^0.1.3"
+    "readline-sync": "^1.4.10"
   }
 }
